--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1659,3 +1659,19 @@ td.rdtYear:hover {
   border: solid #ccc;
   border-width: 1px 1px 0 1px;
 }
+
+.loading-button {
+  background-color: #008cba; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+.loading-button:disabled {
+  opacity: 0.5;
+}
